[tool.poetry]
name = "rustsmith-docs"
version = "0.1.0"
description = "Rustsmith Documentation Source Code"
authors = ["Mayank Sharma <mayank.sharma.uk@gmail.com>"]
readme = "README.md"
packages = [{include = "rustsmith_docs"}]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
